syntax = "proto3";

package prescription;

// Request message
message PrescriptionRequest {
  string ref_no = 1;
}

// Response message
message PrescriptionResponse {
  string reference_number = 1;
  string patient_name = 2;
  int32 age = 3;
  string gender = 4;
  string contact = 5;
  string doctor_name = 6;
  string medicine_name = 7;
  string description = 8;
}

// Service
service PrescriptionService {
  rpc GetPrescription (PrescriptionRequest) returns (PrescriptionResponse);
}
